--- a/gb/25/12/4/n14648369.md
+++ b/gb/25/12/4/n14648369.md
@@ -4,36 +4,36 @@
 <tr><td VALIGN=TOP width="626"><h2 align=center>两种发酵食品助你养肠防癌抗老</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/12/id14648374-2.jpg" class="" data-thumbnail="true" />
 <h6></h6>
-<hr>一碗味噌汤、一杯乳酪，看似普通，却是古老智慧与现代科学共同认证的“长寿发酵双宝”，不但有助于养肠，还能抗老防癌。</p><a title="味噌是天然雌激素！加它一起吃，改善热潮红、盗汗心悸，强骨胳防乳癌。1时间放味噌营养全吸收！研究证实：每周吃2次优格，防肠癌治热毒，3种吃法留住好菌，肠道一整天顺畅。注意！别跟它一起吃，好菌全灭恐致癌｜胡乃文开讲Dr.HU_315" src=""></a><a href="https://dmt6yqw0je6jw.cloudfront.net/Y3cChNcF3UNk"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1i0h9mc4jbi62xTwFWtaQjyzY1kp1c" width="560" b="315" frameBorder="0" allowFullScreen=""></a><h2><span style="color:#3e7100">味增的三大益处</span></h2><p>味噌是长寿的日本人最爱的食物。味噌以黄豆为主原料，加入米麹与盐长时间发酵，蛋白质被分解成易吸收的胺基酸，会带给人诸多益处。</p><p><strong>1. 平衡荷尔蒙与强健骨骼</strong></p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_2"><div id="DJY_M_article_336x280_2"></div></div></div><p>对于更年期女性来说，随着雌激素减少，容易患上骨质疏松与关节炎。味噌富含植物蛋白，以及钙、镁、钾等矿物质，有助于维持骨骼强度；同时味噌所含的大豆异黄酮具有类似女性的荷尔蒙“雌激素”的作用，可缓解更年期热潮红、盗汗、心悸等症状，并减缓骨质流失。</p><div class="hidden lg:block"><div class="m-auto items-center justify-center overflow-hidden print:hidden hidden md:flex" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_D_article_300x250_1"><div id="DJY_D_article_300x250_1"></div></div></div><p>因为豆腐也富含大豆异黄酮，钙质又高，所以味噌汤加豆腐一起食用，营养效果会更好。</p><div><figure style="max-width:450px" class="aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2025/12/id14648371-2@1200x1200.png" target="_blank" rel="noopener noreferrer"><picture><source srcSet="/_next/image?url=https%3A%2F%2Fi.epochtimes.com%2Fassets%2Fuploads%2F2025%2F12%2Fid14648371-2%401200x1200.png&amp;w=1200&amp;q=75" type="image/webp"/><source srcSet="https://i.epochtimes.com/assets/uploads/2025/12/id14648371-2@1200x1200.png" type="image/jpeg"/><img src="/_next/image?url=https%3A%2F%2Fi.epochtimes.com%2Fassets%2Fuploads%2F2025%2F12%2Fid14648371-2%401200x1200.png&amp;w=1200&amp;q=75" alt="味噌豆腐汤。（胡乃文开讲）" width="450" b="261"/></picture></a><figcaption>味噌豆腐汤。（胡乃文开讲）</figcaption></figure></div><p></p><p><strong>3. 抗老与防癌</strong></p><p>味噌富含抗氧化成分，如发酵后的多肽与胺基酸，对抗自由基、减缓细胞老化，还具有潜在的抗肿瘤效果。</p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_3"><div id="DJY_M_article_336x280_3"></div></div></div><p>《英国医学期刊》（The BMJ）发表一项<ahref="https://www.bmj.com/content/368/bmj.m34" target="_blank" class="health-article-hover-class">研究</a>，追踪9万馀名45至74岁日本人，发现发酵大豆制品摄取高者，总死亡风险降低10%。</p><p>《美国医学会期刊》（JAMA）早前<ahref="https://pubmed.ncbi.nlm.nih.gov/19996398/" target="_blank" class="health-article-hover-class">刊文</a>指，乳癌患者摄取大豆食品较多，乳癌复发率和死亡率均降低。</p><h2><span style="color:#3e7100">味噌汤的烹煮要诀</span></h2><p>为了保留味噌的有益成分与活菌，建议在汤煮好后熄火，再加入味噌。若长时间烹煮味噌，不仅破坏益生菌，也会令香气散失。</p><p>若用于烤鱼或烤蔬菜，可在接近熟透时才涂抹味噌。</p><div class="hidden lg:block"><div class="m-auto items-center justify-center overflow-hidden print:hidden hidden md:flex" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_D_article_300x250_3"><div id="DJY_D_article_300x250_3"></div></div></div><p>味噌汤虽然健康，但要注意味噌盐份高，若摄取过量可能增加胃黏膜负担，甚至伤肾。特别是对于胃溃疡、胃酸过多或高血压、肾脏病患者，应选择低盐味噌，或少量使用。</p><h2><span style="color:#3e7100">乳酪润肠抗癌</span></h2><p>第二种发酵食物——乳酪。</p><p>乳酪（yogurt）是由动物乳汁（通常是牛奶）经乳酸菌发酵而成的。发酵后，大部分乳糖被分解成乳酸，降低肠胃不适，因此一些乳糖不耐症的人也能食用。</p><p>乳酪在古代被称为“酪”，唐朝药王孙思邈在《备急千金要方》中说，酪“补肺脏，利大肠”，意思是乳酪可以养肺，还能促进大肠蠕动。</p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_4"><div id="DJY_M_article_336x280_4"></div></div></div><p>中医典籍《本草纲目》也说，酪（乳酪）能润燥利肠，强壮体质，还能治热毒，也就是说解决脓疮、痘痘等问题。</p><p>早在一千多年前，古人就发现了乳酪的天然滋补益处，与现代的认识不谋而合。最新研究也发现，乳酪有助预防某些肠道肿瘤。《肠道微生物》期刊今年发布<ahref="https://pubmed.ncbi.nlm.nih.gov/39937126/" target="_blank" class="health-article-hover-class">研究</a>显示，每周吃2份以上乳酪，可以让“双歧杆菌阳性大肠癌”的风险降低约20%，不过对“双歧杆菌阴性”的肿瘤，风险没有明显变化。</p><p>早前另一<ahref="https://pubmed.ncbi.nlm.nih.gov/36432622/" target="_blank" class="health-article-hover-class">研究</a>也发现，多吃乳酪可以降低腺瘤和大肠癌的风险。</p><h2><span style="color:#3e7100">如何挑选乳酪</span></h2><p>要想发挥乳酪最好的保健效果，建议选择不含添加糖与乳化剂、增稠剂的原味乳酪。<ahref="https://link.springer.com/article/10.1186/s40168-020-00996-6" target="_blank" class="health-article-hover-class">研究</a>发现，经常添加在调味乳酪当中的乳化增稠剂会促进肠道发炎，破坏益生菌的生长环境。市面上的调味乳酪往往含大量糖与各种添加剂，可能带来反效果。</p><p>如果希望补充蛋白质，可选择将水分过滤掉的希腊乳酪。希腊乳酪与希腊式乳酪不同，希腊式乳酪常用增稠剂或牛油模仿浓稠感，但蛋白质与菌数可能较低。</p><h2><span style="color:#3e7100">乳酪升级搭配法</span></h2><p>为了让原味乳酪更美味和营养，建议加入这些配料一起食用：</p><p><strong>1</strong><strong>. 蜂蜜</strong>：蜂蜜中的寡糖可以作为益生菌（如双歧杆菌）的食物，帮助菌种茁壮；同时蜂蜜提供矿物质与维他命。</p><div class="hidden lg:block"><div class="m-auto items-center justify-center overflow-hidden print:hidden hidden md:flex" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_D_article_300x250_4"><div id="DJY_D_article_300x250_4"></div></div></div><p><ahref="https://www.sciencedirect.com/science/article/pii/S0022316624000282?via%3Dihub" target="_blank" class="health-article-hover-class">研究</a>发现，添加蜂蜜的乳酪能提高双歧杆菌在模拟胃、肠环境中的存活率，尤其是三叶草蜂蜜保护双歧杆菌的效果最好。另一项<ahref="https://www.sciencedirect.com/science/article/pii/S0022316624003328?via%3Dihub" target="_blank" class="health-article-hover-class">研究</a>则发现，每天吃两次蜂蜜乳酪两星期后，参与者肠道中的双歧杆菌确实增加了。</p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_5"><div id="DJY_M_article_336x280_5"></div></div></div><p><strong>2</strong><strong>. 水果</strong>：如蓝莓、覆盆莓、蘋果、桃子等，富含天然益生元（如寡糖），能促进好菌成长，并补充维他命C和抗氧化成分。</p><p><strong>3</strong><strong>. 核桃</strong>：核桃富含好油脂Omega-3脂肪酸能保护心血管与脑部，并让口感更丰富。</p><div><figure style="max-width:450px" class="aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2025/12/id14648372-3@1200x1200.png" target="_blank" rel="noopener noreferrer"><picture><source srcSet="/_next/image?url=https%3A%2F%2Fi.epochtimes.com%2Fassets%2Fuploads%2F2025%2F12%2Fid14648372-3%401200x1200.png&amp;w=1200&amp;q=75" type="image/webp"/><source srcSet="https://i.epochtimes.com/assets/uploads/2025/12/id14648372-3@1200x1200.png" type="image/jpeg"/><img src="/_next/image?url=https%3A%2F%2Fi.epochtimes.com%2Fassets%2Fuploads%2F2025%2F12%2Fid14648372-3%401200x1200.png&amp;w=1200&amp;q=75" alt="乳酪的升级搭配。（胡乃文开讲）" width="450" b="231"/></picture></a><figcaption>乳酪的升级搭配。（胡乃文开讲）</figcaption></figure></div><h2><span style="color:#3e7100">吃乳酪的注意事项</span></h2><p>除了搭配之外，吃乳酪的时间也会影响益生菌的作用。建议在餐后约两小时食用。这时胃酸浓度较低，有助益菌存活。尽量避免空腹食用乳酪，因为益生菌可能被胃酸杀死，同时空腹进食冰冷食物会对胃造成刺激，从中医角度看会减少消化系统的阳气（温暖的能量），损害消化功能。</p><p>不过，加热乳酪会破坏乳酪中的菌株，特别是不要用微波炉加热；若要温热，可隔水加热至约40°C。</p><p>味噌与乳酪皆为发酵食品，分别富含植物蛋白与动物蛋白，以及不同的益生菌。每周2到3杯乳酪，2到3碗味噌汤，更有益长期健康。</p><div class="hidden lg:block"><div class="m-auto items-center justify-center overflow-hidden print:hidden hidden md:flex" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_D_article_300x250_5"><div id="DJY_D_article_300x250_5"></div></div></div><p>患有肾脏疾病或对乳糖敏感者，建议在医师或营养师指导下饮食。@</p><p>责任编辑：张晓慧#
+<hr>一碗味噌汤、一杯乳酪，看似普通，却是古老智慧与现代科学共同认证的“长寿发酵双宝”，不但有助于养肠，还能抗老防癌。</p><a title="味噌是天然雌激素！加它一起吃，改善热潮红、盗汗心悸，强骨胳防乳癌。1时间放味噌营养全吸收！研究证实：每周吃2次优格，防肠癌治热毒，3种吃法留住好菌，肠道一整天顺畅。注意！别跟它一起吃，好菌全灭恐致癌｜胡乃文开讲Dr.HU_315" src=""></a><a href="https://d3siwajeg0khti.cloudfront.net/T2fChNcF3UNy"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1i0h9mc4jbi62xTwFWtaQjyzY1kp1c" width="560" b="315" frameBorder="0" allowFullScreen=""></a><h2><span style="color:#3e7100">味增的三大益处</span></h2><p>味噌是长寿的日本人最爱的食物。味噌以黄豆为主原料，加入米麹与盐长时间发酵，蛋白质被分解成易吸收的氨基酸，会带给人诸多益处。</p><p><strong>1. 平衡荷尔蒙与强健骨骼</strong></p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_2"><div id="DJY_M_article_336x280_2"></div></div></div><p>对于更年期女性来说，随着雌激素减少，容易患上骨质疏松与关节炎。味噌富含植物蛋白，以及钙、镁、钾等矿物质，有助于维持骨骼强度；同时味噌所含的大豆异黄酮具有类似女性的荷尔蒙“雌激素”的作用，可缓解更年期热潮红、盗汗、心悸等症状，并减缓骨质流失。</p><div class="hidden lg:block"><div class="m-auto items-center justify-center overflow-hidden print:hidden hidden md:flex" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_D_article_300x250_1"><div id="DJY_D_article_300x250_1"></div></div></div><p>因为豆腐也富含大豆异黄酮，钙质又高，所以味噌汤加豆腐一起食用，营养效果会更好。</p><div><figure style="max-width:450px" class="aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2025/12/id14648371-2@1200x1200.png" target="_blank" rel="noopener noreferrer"><picture><source srcSet="/_next/image?url=https%3A%2F%2Fi.epochtimes.com%2Fassets%2Fuploads%2F2025%2F12%2Fid14648371-2%401200x1200.png&amp;w=1200&amp;q=75" type="image/webp"/><source srcSet="https://i.epochtimes.com/assets/uploads/2025/12/id14648371-2@1200x1200.png" type="image/jpeg"/><img src="/_next/image?url=https%3A%2F%2Fi.epochtimes.com%2Fassets%2Fuploads%2F2025%2F12%2Fid14648371-2%401200x1200.png&amp;w=1200&amp;q=75" alt="味噌豆腐汤。（胡乃文开讲）" width="450" b="261"/></picture></a><figcaption>味噌豆腐汤。（胡乃文开讲）</figcaption></figure></div><p></p><p><strong>3. 抗老与防癌</strong></p><p>味噌富含抗氧化成分，如发酵后的多肽与氨基酸，对抗自由基、减缓细胞老化，还具有潜在的抗肿瘤效果。</p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_3"><div id="DJY_M_article_336x280_3"></div></div></div><p>《英国医学期刊》（The BMJ）发表一项<ahref="https://www.bmj.com/content/368/bmj.m34" target="_blank" class="health-article-hover-class">研究</a>，追踪9万余名45至74岁日本人，发现发酵大豆制品摄取高者，总死亡风险降低10%。</p><p>《美国医学会期刊》（JAMA）早前<ahref="https://pubmed.ncbi.nlm.nih.gov/19996398/" target="_blank" class="health-article-hover-class">刊文</a>指，乳癌患者摄取大豆食品较多，乳癌复发率和死亡率均降低。</p><h2><span style="color:#3e7100">味噌汤的烹煮要诀</span></h2><p>为了保留味噌的有益成分与活菌，建议在汤煮好后熄火，再加入味噌。若长时间烹煮味噌，不仅破坏益生菌，也会令香气散失。</p><p>若用于烤鱼或烤蔬菜，可在接近熟透时才涂抹味噌。</p><div class="hidden lg:block"><div class="m-auto items-center justify-center overflow-hidden print:hidden hidden md:flex" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_D_article_300x250_3"><div id="DJY_D_article_300x250_3"></div></div></div><p>味噌汤虽然健康，但要注意味噌盐分高，若摄取过量可能增加胃黏膜负担，甚至伤肾。特别是对于胃溃疡、胃酸过多或高血压、肾脏病患者，应选择低盐味噌，或少量使用。</p><h2><span style="color:#3e7100">乳酪润肠抗癌</span></h2><p>第二种发酵食物——乳酪。</p><p>乳酪（yogurt）是由动物乳汁（通常是牛奶）经乳酸菌发酵而成的。发酵后，大部分乳糖被分解成乳酸，降低肠胃不适，因此一些乳糖不耐症的人也能食用。</p><p>乳酪在古代被称为“酪”，唐朝药王孙思邈在《备急千金要方》中说，酪“补肺脏，利大肠”，意思是乳酪可以养肺，还能促进大肠蠕动。</p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_4"><div id="DJY_M_article_336x280_4"></div></div></div><p>中医典籍《本草纲目》也说，酪（乳酪）能润燥利肠，强壮体质，还能治热毒，也就是说解决脓疮、痘痘等问题。</p><p>早在一千多年前，古人就发现了乳酪的天然滋补益处，与现代的认识不谋而合。最新研究也发现，乳酪有助预防某些肠道肿瘤。《肠道微生物》期刊今年发布<ahref="https://pubmed.ncbi.nlm.nih.gov/39937126/" target="_blank" class="health-article-hover-class">研究</a>显示，每周吃2份以上乳酪，可以让“双歧杆菌阳性大肠癌”的风险降低约20%，不过对“双歧杆菌阴性”的肿瘤，风险没有明显变化。</p><p>早前另一<ahref="https://pubmed.ncbi.nlm.nih.gov/36432622/" target="_blank" class="health-article-hover-class">研究</a>也发现，多吃乳酪可以降低腺瘤和大肠癌的风险。</p><h2><span style="color:#3e7100">如何挑选乳酪</span></h2><p>要想发挥乳酪最好的保健效果，建议选择不含添加糖与乳化剂、增稠剂的原味乳酪。<ahref="https://link.springer.com/article/10.1186/s40168-020-00996-6" target="_blank" class="health-article-hover-class">研究</a>发现，经常添加在调味乳酪当中的乳化增稠剂会促进肠道发炎，破坏益生菌的生长环境。市面上的调味乳酪往往含大量糖与各种添加剂，可能带来反效果。</p><p>如果希望补充蛋白质，可选择将水分过滤掉的希腊乳酪。希腊乳酪与希腊式乳酪不同，希腊式乳酪常用增稠剂或牛油模仿浓稠感，但蛋白质与菌数可能较低。</p><h2><span style="color:#3e7100">乳酪升级搭配法</span></h2><p>为了让原味乳酪更美味和营养，建议加入这些配料一起食用：</p><p><strong>1</strong><strong>. 蜂蜜</strong>：蜂蜜中的寡糖可以作为益生菌（如双歧杆菌）的食物，帮助菌种茁壮；同时蜂蜜提供矿物质与维他命。</p><div class="hidden lg:block"><div class="m-auto items-center justify-center overflow-hidden print:hidden hidden md:flex" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_D_article_300x250_4"><div id="DJY_D_article_300x250_4"></div></div></div><p><ahref="https://www.sciencedirect.com/science/article/pii/S0022316624000282?via%3Dihub" target="_blank" class="health-article-hover-class">研究</a>发现，添加蜂蜜的乳酪能提高双歧杆菌在模拟胃、肠环境中的存活率，尤其是三叶草蜂蜜保护双歧杆菌的效果最好。另一项<ahref="https://www.sciencedirect.com/science/article/pii/S0022316624003328?via%3Dihub" target="_blank" class="health-article-hover-class">研究</a>则发现，每天吃两次蜂蜜乳酪两星期后，参与者肠道中的双歧杆菌确实增加了。</p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_5"><div id="DJY_M_article_336x280_5"></div></div></div><p><strong>2</strong><strong>. 水果</strong>：如蓝莓、覆盆莓、苹果、桃子等，富含天然益生元（如寡糖），能促进好菌成长，并补充维他命C和抗氧化成分。</p><p><strong>3</strong><strong>. 核桃</strong>：核桃富含好油脂Omega-3脂肪酸能保护心血管与脑部，并让口感更丰富。</p><div><figure style="max-width:450px" class="aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2025/12/id14648372-3@1200x1200.png" target="_blank" rel="noopener noreferrer"><picture><source srcSet="/_next/image?url=https%3A%2F%2Fi.epochtimes.com%2Fassets%2Fuploads%2F2025%2F12%2Fid14648372-3%401200x1200.png&amp;w=1200&amp;q=75" type="image/webp"/><source srcSet="https://i.epochtimes.com/assets/uploads/2025/12/id14648372-3@1200x1200.png" type="image/jpeg"/><img src="/_next/image?url=https%3A%2F%2Fi.epochtimes.com%2Fassets%2Fuploads%2F2025%2F12%2Fid14648372-3%401200x1200.png&amp;w=1200&amp;q=75" alt="乳酪的升级搭配。（胡乃文开讲）" width="450" b="231"/></picture></a><figcaption>乳酪的升级搭配。（胡乃文开讲）</figcaption></figure></div><h2><span style="color:#3e7100">吃乳酪的注意事项</span></h2><p>除了搭配之外，吃乳酪的时间也会影响益生菌的作用。建议在餐后约两小时食用。这时胃酸浓度较低，有助益菌存活。尽量避免空腹食用乳酪，因为益生菌可能被胃酸杀死，同时空腹进食冰冷食物会对胃造成刺激，从中医角度看会减少消化系统的阳气（温暖的能量），损害消化功能。</p><p>不过，加热乳酪会破坏乳酪中的菌株，特别是不要用微波炉加热；若要温热，可隔水加热至约40°C。</p><p>味噌与乳酪皆为发酵食品，分别富含植物蛋白与动物蛋白，以及不同的益生菌。每周2到3杯乳酪，2到3碗味噌汤，更有益长期健康。</p><div class="hidden lg:block"><div class="m-auto items-center justify-center overflow-hidden print:hidden hidden md:flex" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_D_article_300x250_5"><div id="DJY_D_article_300x250_5"></div></div></div><p>患有肾脏疾病或对乳糖敏感者，建议在医师或营养师指导下饮食。@◇</p><p>责任编辑：张晓慧#
 <hr>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/1/n11356564.md#1" target="_blank">共产暴政录：三区叛乱和侵华日军攻势协调进行</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/16/n10855894.md#1" target="_blank">绝处逢生 韩国男子见证两个奇迹</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/11/n11180153.md#1" target="_blank">【征文】章阁：中国古代专制吗（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/15/n4663033.md#1" target="_blank">食道癌晚期的绝症患者获救</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644037.md#1">难以归位的怅然若失——解读苏轼《后赤壁赋》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/26/n14492521.md#1">【品读唐诗】孟浩然的岘山第一诗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14635938.md#1">尚书公想招穷书生为婿 夫人选了贵公子 结局出人意料（上）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14635971.md#1">尚书公想招穷书生为婿 夫人选了贵公子 结局出人意料（下）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648988.md#1">【纪元焦点】德部署箭-3系统 欧洲重新武装起来</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648981.md#1">【重播】卢比奥出席“健康合作框架”签署仪式</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14649017.md#1">【直播】邦迪和帕特尔宣布一项重要执法声明</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647601.md#1">大陆猪价跌跌不休 养殖户：养啥都赔钱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647913.md#1">“脱贫”变返贫 中共玩文字游戏 百姓诉苦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647914.md#1">上海演出被突然中断后 日本歌手大槻真希首发声</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648331.md#1">6岁儿子调皮狂奔 刘诗诗放大招 网友笑翻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14648303.md#1">迪丽热巴新戏片酬曝光 疑为角色减重久病不愈</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647603.md#1">滨崎步零观众演出后返日 唱片公司会长批中共</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647639.md#1">胡歌首谈二胎儿子 自认做父亲挺失败</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647968.md#1">《阿凡达3》公开两精彩片段 卡麦隆解释剧情</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647976.md#1">专家：你的伴侣无条件爱你的3个迹象</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647181.md#1">为何冬天时你应该在窗户边放一碗盐？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647604.md#1">【厨娘香Q秀】全麦核桃吐司</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648713.md#1">AI产出的影片以假乱真 如何辨识？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647107.md#1">私人飞机飞行员的薪资有多少？有何优缺点？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/12/4/n14648369.htm">两种发酵食品助你养肠防癌抗老</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648369.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
